@@ -1,5 +1,6 @@
 0.09
  - Improve test cover of 03-new.t.
+ - Improve test of 04-parse.t.
  - Update copyright years.
 
 0.08 2018-02-10T13:28:34+01:00
